--- a/package.json
+++ b/package.json
@@ -25,6 +25,14 @@
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
     "@types/reactstrap": "^8.0.4",
+    "husky": "^3.0.4",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "typescript": "^3.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
