--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^9.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "xstate": "^4.6.7"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.138",
