--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@xstate/react": "^0.7.1",
     "@zeit/next-css": "^1.0.1",
     "lodash": "^4.17.15",
     "next": "^9.0.5",
