--- a/package.json
+++ b/package.json
@@ -15,21 +15,25 @@
   "dependencies": {
     "@xstate/react": "^0.7.1",
     "@zeit/next-css": "^1.0.1",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "next": "^9.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "reactstrap": "^8.0.1",
     "xstate": "^4.6.7"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
-    "@types/reactstrap": "^8.0.4",
+    "autoprefixer": "^9.6.1",
+    "cssnano": "^4.1.10",
     "husky": "^3.0.4",
+    "postcss-easy-import": "^3.0.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "tailwindcss": "^1.1.2",
     "typescript": "^3.5.3"
   },
   "husky": {
