--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next",
     "export": "next export",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "run-s build export"
   },
   "dependencies": {
     "@xstate/react": "^0.7.1",
@@ -30,6 +31,8 @@
     "autoprefixer": "^9.6.1",
     "cssnano": "^4.1.10",
     "husky": "^3.0.4",
+    "netlify-cli": "^3.16.2",
+    "npm-run-all": "^4.1.5",
     "postcss-easy-import": "^3.0.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
